--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://alphaTdeeraj.github.io/Online-Tic-Tac-Toe-frontend",
   "name": "tic_tac_toe",
   "version": "0.1.0",
   "private": true,
